# dark-light

./: Cargo.toml  README.md  justfile
examples/: detect.rs  subscribe.rs  sync.rs
src/: error.rs  lib.rs  mode.rs
