[package]
name = "dark-light"
version = "2.0.0"
authors = [
    "Corey Farwell <coreyf@rwell.org>",
    "Eduardo Flores <edflores@proton.me>",
]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-dark-light/rust-dark-light"
description = "Detect if dark mode or light mode is enabled"
readme = "README.md"
build = "build.rs"
rust-version = "1.78.0"

[dependencies]

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
ashpd = { version = "0.10.0", default-features = false, features = [
    "async-std",
] }
async-std = "1.13.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.0", features = [
    "NSObject",
    "NSString",
    "NSDictionary",
    "NSUserDefaults",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["MediaQueryList", "Window"] }
